--- a/Lab2025_SistU/nbproject/private/private.properties
+++ b/Lab2025_SistU/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\leonel\\AppData\\Roaming\\NetBeans\\25\\build.properties
+user.properties.file=C:\\Users\\nahue\\AppData\\Roaming\\NetBeans\\25\\build.properties
