--- a/Lab2025_SistU/nbproject/private/private.properties
+++ b/Lab2025_SistU/nbproject/private/private.properties
@@ -1,1 +1,8 @@
-user.properties.file=C:\\Users\\leonel\\AppData\\Roaming\\NetBeans\\25\\build.properties
+compile.on.save=false
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\nahue\\AppData\\Roaming\\NetBeans\\25\\build.properties
